# arch-health

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/checks/: audit.rs  library.rs  mod.rs  pacman.rs
src/output/: formatter.rs  logger.rs  mod.rs  progress.rs
